--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-    "buildCommand": null,
-    "installCommand": null,
+    "buildCommand": "ruby run.rb",
+    "installCommand": "bundle install",
     "outputDirectory": "tmp",
     "framework": null,
     "cleanUrls": true,
